--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -2,4 +2,11 @@
 @import "config.less";
 @import "shared.less";
 
+@import "blocks/sidebar-layout.less";
+@import "components/logo.less";
+@import "components/main.less";
 @import "components/nav.less";
+@import "components/page.less";
+@import "components/sidebar.less";
+@import "components/social-button.less";
+@import "components/title-header.less";
