Add sidebar components

--- a/less/blocks/sidebar-layout.less
+++ b/less/blocks/sidebar-layout.less
@@ -13,6 +13,10 @@
   }
 }
 
+.sidebar-layout__section {
+  margin-bottom: 30px;
+}
+
 .sidebar-layout__social-links {
   display: flex;
   flex-direction: row;
