--- a/less/config.less
+++ b/less/config.less
@@ -12,8 +12,9 @@
 
 // Colors ---------------------------------------------------------------------
 
-@navbar-white: #fff;
-
+@white: #fff;
 @background-grey: #f9f9fb;
-@light-grey: #ddd;
+@light-grey: #e8e8ed;
+@medium-grey: #bbb;
+@dark-grey: #444;
 @text-headers: #111;
