--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -7,6 +7,8 @@
 @import "components/main.less";
 @import "components/nav.less";
 @import "components/page.less";
+@import "components/search-input.less";
 @import "components/sidebar.less";
+@import "components/sidebar-image.less";
 @import "components/social-button.less";
 @import "components/title-header.less";
