--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -7,8 +7,10 @@
 @import "components/main.less";
 @import "components/nav.less";
 @import "components/page.less";
+@import "components/page-title.less";
+@import "components/post-header.less";
 @import "components/search-input.less";
+@import "components/share-button.less";
 @import "components/sidebar.less";
 @import "components/sidebar-image.less";
 @import "components/social-button.less";
-@import "components/title-header.less";
