Add post components

--- a/less/components/page.less
+++ b/less/components/page.less
@@ -1,10 +1,11 @@
 .page {
+  padding: 0 0 50px;
   position: relative;
   width: 100%;
 }
 
 .page__content {
-  padding: 0 20px;
+  padding: 0;
   width: 100%;
 
   @media @desktop {
