--- a/less/components/search-input.less
+++ b/less/components/search-input.less
@@ -5,9 +5,9 @@
 }
 
 .search-input__input {
-  background-color: @background-grey;
+  background-color: @background-alternative;
   border: 0;
-  border: 1px solid @medium-grey;
+  border: 1px solid @light-grey;
   box-sizing: border-box;
   color: @dark-grey;
   flex: 1;
@@ -20,7 +20,7 @@
   background-color: @dark-grey;
   border-radius: 3px;
   box-sizing: border-box;
-  color: @background-grey;
+  color: @white;
   display: block;
   height: 35px;
   line-height: 25px;
