--- a/less/components/sidebar.less
+++ b/less/components/sidebar.less
@@ -1,10 +1,11 @@
 .sidebar {
   display: flex;
   flex-direction: column;
+  padding: 0 25px;
   width: 100%;
 
   @media @desktop {
-    padding-left: 40px;
+  	padding: 0 0 0 40px;
     width: 290px;
   }
 }
