--- a/less/components/social-button.less
+++ b/less/components/social-button.less
@@ -1,5 +1,5 @@
 .social-button {
-  background-color: @text-headers;
+  background-color: @black;
   border-radius: 20px;
   color: @background-grey;
   display: block;
