--- a/less/config.less
+++ b/less/config.less
@@ -9,15 +9,23 @@
 // Fonts ----------------------------------------------------------------------
 
 @montserrat: 'Montserrat', sans-serif;
+@open-sans: 'Open Sans', serif;
+@source-code: 'Source Code Pro', monospace;
 
 // Colors ---------------------------------------------------------------------
 
 @white: #fff;
-@background-grey: #f9f9fb;
-@light-grey: #e8e8ed;
+@background-grey: #fdfdff;
+@background-alternative: #f9f9fb;
+@light-grey: #e0e0e8;
 @medium-grey: #bbb;
+@medium-grey: #d4d4d4;
 @dark-grey: #444;
+@black: #111;
+
 @text-headers: #111;
+@text-content: #666;
+@links: #0fb2e8;
 
 @facebook: #3b5998;
 @twitter: #4099ff;
