--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -1,16 +1,22 @@
-
 @import "config.less";
 @import "shared.less";
 
-@import "blocks/sidebar-layout.less";
+@import "components/disqus-thread.less";
 @import "components/logo.less";
 @import "components/main.less";
 @import "components/nav.less";
 @import "components/page.less";
 @import "components/page-title.less";
+@import "components/post-action-button.less";
+@import "components/post-content.less";
+@import "components/post-excerpt.less";
+@import "components/post-footer.less";
 @import "components/post-header.less";
 @import "components/search-input.less";
 @import "components/share-button.less";
 @import "components/sidebar.less";
+@import "components/sidebar-greeting.less";
+@import "components/sidebar-layout.less";
+@import "components/sidebar-notes.less";
 @import "components/sidebar-image.less";
 @import "components/social-button.less";
