--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -1,29 +1,30 @@
 .nav {
-	display: flex;
-	height: 50px;
-	justify-content: flex-end;
-	margin-bottom: 0 0 20px;
-	padding: 0 30px;
-	width: 100%;
+  display: flex;
+  height: 50px;
+  justify-content: flex-end;
+  margin-bottom: 0 0 20px;
+  padding: 0 25px;
+  width: 100%;
 
-	@media @desktop {
-		margin: 0 auto 30px;
-		max-width: 1100px;
-	}
+  @media @desktop {
+    margin: 0 auto 30px;
+    max-width: 1100px;
+    padding: 0;
+  }
 }
 
 .nav__link {
-	color: @text-headers;
-	font-family: @montserrat;
-	font-size: 20px;
-	font-weight: bold;
-	height: 20px;
-	letter-spacing: 3px;
-	line-height: 20px;
-	margin: 15px 20px;
-	text-transform: uppercase;
+  color: @text-headers;
+  font-family: @montserrat;
+  font-size: 20px;
+  font-weight: bold;
+  height: 20px;
+  letter-spacing: 3px;
+  line-height: 20px;
+  margin: 15px 20px;
+  text-transform: uppercase;
 
-	&:last-child {
-		margin-right: 0;
-	}
+  &:last-child {
+    margin-right: 0;
+  }
 }
