--- a/less/components/page-title.less
+++ b/less/components/page-title.less
@@ -1,7 +1,16 @@
 .page-title {
-  font-family: @montserrat;
-  font-size: 34px;
   color: @text-headers;
-  width: 100%;
+  font-family: @montserrat;
+  font-size: 45px;
+  font-weight: bold;
   margin: 0 auto;
+  width: 100%;
+}
+
+.page-title__link {
+	color: inherit;
+	font-family: inherit;
+	font-size: inherit;
+	font-weight: inherit;
+	text-decoration: none;
 }
