--- a/less/components/post-header.less
+++ b/less/components/post-header.less
@@ -1,11 +1,27 @@
 .post-header {
-	display: flex;
-	flex-direction: column;
-	width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin: 0 0 20px;
+  padding: 0 25px;
+  width: 100%;
+
+  @media @desktop {
+    padding: 0;
+  }
 }
 
 .post-header__meta {
-	display: flex;
-	flex-direction: row;
-	width: 100%;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.post-header__date {
+  color: @medium-grey;
+  font-family: @montserrat;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 18px;
+  margin: 0 0 0 10px;
+  text-transform: uppercase;
 }
