--- a/less/components/sidebar-image.less
+++ b/less/components/sidebar-image.less
@@ -1,6 +1,6 @@
 .sidebar-image {
   display: block;
-  background-color: @light-grey;
+  background-color: @background-alternative;
   width: 100%;
   height: 0;
   overflow: hidden;
