--- a/less/shared.less
+++ b/less/shared.less
@@ -1,21 +1,23 @@
 * {
-  font-family: 'Open Sans', sans-serif;
-	margin: 0;
-	outline: 0;
-	padding: 0;
-	text-decoration: none;
+  font-family: @open-sans;
+  margin: 0;
+  outline: 0;
+  padding: 0;
+  text-decoration: none;
 }
 
 body {
-	background-color: @background-grey;
-	overflow: hidden;
-	width: 100%;
+  background-color: @background-grey;
+  color: @text-content;
+  font-size: 18px;
+  // overflow: hidden;
+  width: 100%;
 }
 
 div {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 a, button {
-	cursor: pointer;
+  cursor: pointer;
 }
