Add a posts-timeline block

--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -20,3 +20,4 @@
 @import "components/sidebar-notes.less";
 @import "components/sidebar-image.less";
 @import "components/social-button.less";
+@import "components/timeline.less";
