--- a/less/components/compact-search.less
+++ b/less/components/compact-search.less
@@ -1,10 +1,10 @@
-.search-input {
+.compact-search {
   display: flex;
   flex-direction: row;
   width: 100%;
 }
 
-.search-input__input {
+.compact-search__input {
   background-color: @background-alternative;
   border: 0;
   border: 1px solid @light-grey;
@@ -16,16 +16,17 @@
   padding: 0 10px;
 }
 
-.search-input__button {
-  background-color: @dark-grey;
+.compact-search__button {
+  background-color: @black;
+  border: 0;
   border-radius: 3px;
   box-sizing: border-box;
   color: @white;
   display: block;
+  font-size: 18px;
   height: 35px;
   line-height: 25px;
   margin-left: 10px;
-  padding: 5px 10px;
   text-align: center;
   width: 45px;
 }
