--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -1,6 +1,7 @@
 @import "config.less";
 @import "shared.less";
 
+@import "components/compact-search.less";
 @import "components/disqus-thread.less";
 @import "components/logo.less";
 @import "components/main.less";
@@ -12,7 +13,6 @@
 @import "components/post-excerpt.less";
 @import "components/post-footer.less";
 @import "components/post-header.less";
-@import "components/search-input.less";
 @import "components/share-button.less";
 @import "components/sidebar.less";
 @import "components/sidebar-greeting.less";
