--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -2,12 +2,12 @@
   display: flex;
   height: 50px;
   justify-content: flex-end;
-  margin-bottom: 0 0 20px;
+  margin-bottom: 20px;
   padding: 0 25px;
   width: 100%;
 
   @media @desktop {
-    margin: 0 auto 30px;
+    margin: 20px auto 30px;
     max-width: 1100px;
     padding: 0;
   }
