Implement search page

--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -21,3 +21,5 @@
 @import "components/sidebar-image.less";
 @import "components/social-button.less";
 @import "components/timeline.less";
+
+@import "views/search.less";
