--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -1,10 +1,27 @@
 .nav {
+  background-color: @background-alternative;
+  border-left: 1px solid @light-grey;
   display: flex;
-  height: 50px;
-  justify-content: flex-end;
-  margin-bottom: 20px;
-  padding: 0 25px;
-  width: 100%;
+  flex-direction: column;
+  height: 100%;
+  padding: 5px 0;
+  position: absolute;
+    bottom: 0;
+    right: -250px;
+    top: 0;
+  width: 250px;
+
+  @media @tablet-wide {
+    background-color: transparent;
+    border: 0;
+    flex-direction: row;
+    height: 50px;
+    justify-content: flex-end;
+    margin-bottom: 20px;
+    padding: 0 25px;
+    position: static;
+    width: 100%;
+  }
 
   @media @desktop {
     margin: 20px auto 30px;
@@ -24,7 +41,9 @@
   margin: 15px 20px;
   text-transform: uppercase;
 
-  &:last-child {
-    margin-right: 0;
+  @media @tablet-wide {
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
