Fix non-rwd conforming stylesheets

--- a/less/components/logo.less
+++ b/less/components/logo.less
@@ -6,13 +6,25 @@
 .logo__link {
   display: block;
   margin: 0 auto;
-  width: 300px;
+
+  width: 200px;
+
+  @media @tablet {
+    width: 300px;
+  }
 }
 
 .logo__img {
   background-image: url('/img/logo-black-large.png');
   background-position: center center;
-  background-size: 300px 300px;
-  height: 300px;
-  width: 300px;
+
+  background-size: 200px;
+  height: 200px;
+  width: 200px;
+
+  @media @tablet {
+    background-size: 300px 300px;
+    height: 300px;
+    width: 300px;
+  }
 }
