--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -22,4 +22,5 @@
 @import "components/social-button.less";
 @import "components/timeline.less";
 
+@import "views/articles.less";
 @import "views/search.less";
