--- a/less/views/search.less
+++ b/less/views/search.less
@@ -1,3 +1,12 @@
-.search .sidebar-layout__content .compact-search {
-	margin: 20px 0 30px;
+.search__header {
+	margin: 0 0 30px;
+	padding: 0 25px;
+
+	& .compact-search {
+		margin: 20px 0 0;
+	}
+
+	@media @desktop {
+		padding: 0;
+	}
 }
