--- a/less/components/post-excerpt.less
+++ b/less/components/post-excerpt.less
@@ -5,8 +5,8 @@
 .post-excerpt__actions {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  margin: 30px 0 0;
+  justify-content: left;
+  margin: 20px 0 0;
   padding: 0 25px;
   width: 100%;
 
