Add loading placeholders for posts

--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -12,6 +12,7 @@
 @import "components/post-excerpt.less";
 @import "components/post-footer.less";
 @import "components/post-header.less";
+@import "components/post-placeholder.less";
 @import "components/read-more-button.less";
 @import "components/share-button.less";
 @import "components/sidebar.less";
