--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -23,5 +23,7 @@
 @import "components/social-button.less";
 @import "components/timeline.less";
 
+@import "blocks/search-results.less";
+
 @import "views/articles.less";
 @import "views/search.less";
