--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -3,6 +3,7 @@
 
 @import "components/compact-search.less";
 @import "components/disqus-thread.less";
+@import "components/error.less";
 @import "components/logo.less";
 @import "components/main.less";
 @import "components/nav.less";
