Don't include 404's in posts count

--- a/less/components/post-placeholder.less
+++ b/less/components/post-placeholder.less
@@ -3,7 +3,12 @@
 	flex-direction: column;
 	justify-content: left;
 	margin: 0 0 30px;
+	padding: 0 25px;
 	width: 100%;
+
+	@media @desktop {
+		padding: 0;
+	}
 }
 
 .post-placeholder__title {
