Refactor the site to feature updated design

--- a/less/components/logo.less
+++ b/less/components/logo.less
@@ -1,30 +1,14 @@
 .logo {
-  margin: 0 0 50px;
-  width: 100%;
-}
-
-.logo__link {
   display: block;
-  margin: 0 auto;
-
-  width: 200px;
-
-  @media @tablet {
-    width: 300px;
-  }
+  margin-bottom: 50px;
+  width: 120px;
 }
 
 .logo__img {
-  background-image: url('/img/logo-black-large.png');
+  background-image: url('/img/logo-black-compact.png');
   background-position: center center;
 
-  background-size: 200px;
-  height: 200px;
-  width: 200px;
-
-  @media @tablet {
-    background-size: 300px 300px;
-    height: 300px;
-    width: 300px;
-  }
+  background-size: 120px;
+  height: 120px;
+  width: 120px;
 }
