--- a/less/components/post-content.less
+++ b/less/components/post-content.less
@@ -19,7 +19,7 @@
   padding: 0 25px;
   text-align: left;
 
-  @media @desktop {
+  @media @tablet-wide {
     padding: 0;
   }
 }
@@ -46,7 +46,7 @@
   margin: 0 0 20px;
   padding: 0 25px;
 
-  @media @desktop {
+  @media @tablet-wide {
     padding: 0;
   }
 }
@@ -61,7 +61,7 @@
   overflow-x: scroll;
   padding: 0;
 
-  @media @desktop {
+  @media @tablet-wide {
     border-radius: 3px;
     border: 1px solid @light-grey;
     width: 100%;
@@ -79,7 +79,7 @@
   display: block;
   padding: 10px 25px;
 
-  @media @desktop {
+  @media @tablet-wide {
     padding: 5px 15px;
   }
 }
@@ -159,7 +159,7 @@
   margin: 0 auto 20px !important;
   padding: 0 25px !important;
 
-  @media @desktop {
+  @media @tablet-wide {
     padding: 0 !important;
   }
 }
