--- a/less/components/post-header.less
+++ b/less/components/post-header.less
@@ -5,9 +5,26 @@
   padding: 0 25px;
   width: 100%;
 
-  @media @desktop {
+  @media @tablet-wide {
     padding: 0;
   }
+}
+
+.post-header__title {
+  color: @text-headers;
+  font-family: @montserrat;
+  font-size: 45px;
+  font-weight: bold;
+  margin: 0 auto;
+  width: 100%;
+}
+
+.post-header__link {
+  color: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  font-weight: inherit;
+  text-decoration: none;
 }
 
 .post-header__meta {
