--- a/less/components/single-column.less
+++ b/less/components/single-column.less
@@ -1,11 +1,11 @@
-.sidebar {
+.single-column {
   display: flex;
   flex-direction: column;
-  padding: 0 25px;
   width: 100%;
 
   @media @desktop {
-  	padding: 0 0 0 40px;
-    width: 290px;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 20px 0 0;
   }
 }
