--- a/less/config.less
+++ b/less/config.less
@@ -4,10 +4,11 @@
 @phone-wide: ~"only screen and (min-width: 380px)";
 @tablet: ~"only screen and (min-width: 570px)";
 @tablet-wide: ~"only screen and (min-width: 768px)";
-@desktop: ~"only screen and (min-width: 1100px)";
+@desktop: ~"only screen and (min-width: 1150px)";
 
 // Fonts ----------------------------------------------------------------------
 
+@montserrat: 'Work Sans', sans-serif;
 @montserrat: 'Montserrat', sans-serif;
 @open-sans: 'Open Sans', serif;
 @source-code: 'Source Code Pro', monospace;
@@ -16,10 +17,11 @@
 
 @white: #fff;
 @background-grey: #fdfdff;
+@background-grey: #fffffd;
 @background-alternative: #f9f9fb;
 @light-grey: #e0e0e8;
 @medium-grey: #d4d4d4;
-@dark-grey: #444;
+@dark-grey: #ccc;
 @black: #111;
 
 @text-headers: #111;
