--- a/less/screen.main.less
+++ b/less/screen.main.less
@@ -1,30 +1,26 @@
 @import "config.less";
 @import "shared.less";
 
-@import "components/compact-search.less";
 @import "components/disqus-thread.less";
 @import "components/error.less";
 @import "components/logo.less";
 @import "components/main.less";
+@import "components/mobile-nav.less";
 @import "components/nav.less";
 @import "components/page.less";
-@import "components/page-title.less";
+@import "components/page-header.less";
+@import "components/pagination.less";
 @import "components/post-content.less";
 @import "components/post-excerpt.less";
 @import "components/post-footer.less";
 @import "components/post-header.less";
 @import "components/post-placeholder.less";
 @import "components/read-more-button.less";
+@import "components/search-form.less";
+@import "components/search-link.less";
 @import "components/share-button.less";
-@import "components/sidebar.less";
-@import "components/sidebar-greeting.less";
-@import "components/sidebar-layout.less";
-@import "components/sidebar-notes.less";
-@import "components/sidebar-image.less";
+@import "components/single-column.less";
+@import "components/site-links.less";
 @import "components/social-button.less";
-@import "components/timeline.less";
-
-@import "blocks/search-results.less";
-
-@import "views/articles.less";
-@import "views/search.less";
+@import "components/social-links.less";
+@import "components/view-all-button.less";
