--- a/less/components/nav.less
+++ b/less/components/nav.less
@@ -1,49 +1,14 @@
 .nav {
-  background-color: @background-alternative;
-  border-left: 1px solid @light-grey;
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  padding: 5px 0;
-  position: absolute;
-    bottom: 0;
-    right: -250px;
-    top: 0;
-  width: 250px;
-
-  @media @tablet-wide {
-    background-color: transparent;
-    border: 0;
-    flex-direction: row;
-    height: 50px;
-    justify-content: flex-end;
-    margin-bottom: 20px;
-    padding: 0 25px;
-    position: static;
-    width: 100%;
-  }
+  display: none;
 
   @media @desktop {
-    margin: 20px auto 30px;
-    max-width: 1100px;
-    padding: 0;
-  }
-}
-
-.nav__link {
-  color: @text-headers;
-  font-family: @montserrat;
-  font-size: 20px;
-  font-weight: bold;
-  height: 20px;
-  letter-spacing: 3px;
-  line-height: 20px;
-  margin: 15px 20px;
-  text-transform: uppercase;
-
-  @media @tablet-wide {
-    &:last-child {
-      margin-right: 0;
-    }
+    display: flex;
+    flex-direction: column;
+    padding: 50px 25px 25px;
+    position: fixed;
+      bottom: 0;
+      left: 0;
+      top: 0;
+    width: 300px;
   }
 }
