--- a/less/components/page.less
+++ b/less/components/page.less
@@ -1,81 +1,14 @@
 .page {
-  overflow-x: hidden;
-  overflow-y: scroll;
-  position: fixed;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    top: 0;
+  display: flex;
+  flex-direction: column;
+  padding: 80px 0 0;
   width: 100%;
-
-  &.with-nav {
-    overflow-y: hidden;
-
-    @media @tablet-wide {
-      overflow-y: scroll;
-    }
-  }
-}
-
-.page__content {
-  padding: 0 0 50px;
-  position: absolute;
-    left: 0;
-    top: 0;
-  transition: left .15s;
-  width: 100%;
-
-  .page.with-nav & {
-    left: -250px;
-  }
-
-  .page.with-nav &::after {
-      background-color: @white;
-      content: "";
-      display: block;
-      opacity: 0.7;
-      position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        top: 0;
-      z-index: 10;
-
-      @media @tablet-wide {
-        content: none;
-        display: none;
-      }
-  }
 
   @media @tablet-wide {
-    position: static;
+    padding: 80px 325px 0 25px;
   }
 
   @media @desktop {
-    margin: 0 auto;
-    max-width: 1100px;
+    padding: 50px 25px 25px 325px;
   }
-}
-
-.page__nav-toggle {
-  display: block;
-  height: 50px;
-  margin-bottom: 20px;
-  width: 100%;
-
-  @media @tablet-wide {
-    display: none;
-  }
-}
-
-.page__nav-toggle-btn {
-  background-color: transparent;
-  border: 0;
-  display: block;
-  font-size: 20px;
-  height: 20px;
-  position: absolute;
-    right: 25px;
-    top: 15px;
-  z-index: 100;
 }
