--- a/less/components/mobile-nav.less
+++ b/less/components/mobile-nav.less
@@ -26,6 +26,8 @@
 }
 
 .mobile-nav__toggle {
+  background-color: transparent;
+  border: 0;
   color: @black;
   cursor: pointer;
   font-size: 20px;
