--- a/less/components/search-form.less
+++ b/less/components/search-form.less
@@ -13,6 +13,7 @@
 .search-form__input {
   border: 0;
   border-bottom: 1px solid @black;
+  border-radius: 0;
   color: @black;
   flex: 1;
   font-size: 22px;
