--- a/less/components/error.less
+++ b/less/components/error.less
@@ -3,18 +3,35 @@
   flex-direction: column;
   padding: 0 25px 50px;
   width: 100%;
+
+  @media @tablet {
+    padding: 0 0 50px;
+  }
 }
 
-.error__message {
+.error__header {
   color: @text-headers;
   font-family: @montserrat;
   font-size: 30px;
   font-weight: bold;
-  text-align: center;
+  margin-bottom: 20px;
+  text-align: left;
+  white-space: pre-line;
   width: 100%;
 
   @media @tablet {
     font-size: 45px;
+  }
+}
+
+.error__message {
+  color: @text-content;
+  font-family: @open-sans;
+  margin: 0 0 50px;
+  width: 100%;
+  white-space: pre-line;
+
+  @media @tablet {
     text-align: left;
   }
 }
@@ -24,11 +41,10 @@
   font-family: @montserrat;
   font-size: 100px;
   font-weight: bold;
-  text-align: center;
+  text-align: right;
 
   @media @tablet {
     font-size: 160px;
     padding: 0 30px;
-    text-align: left;
   }
 }
