--- a/less/shared.less
+++ b/less/shared.less
@@ -22,6 +22,17 @@ a, button {
   cursor: pointer;
 }
 
+.sr-only {
+  border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
 @keyframes loading-pulse {
   0% {
     background-color: lighten( @light-grey, 5% );
