Add Post page and Post components

--- a/assets/stylesheets/shared.scss
+++ b/assets/stylesheets/shared.scss
@@ -44,3 +44,15 @@ a, button {
 		background-color: lighten( $light-grey, 5% );
 	}
 }
+
+.facebook {
+	background-color: $facebook;
+}
+
+.twitter {
+	background-color: $twitter;
+}
+
+.pinterest {
+	background-color: $pinterest;
+}
