--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -2,6 +2,11 @@
 @import "./shared.scss";
 
 @import "components/navigation/styles.scss";
+@import "components/post-content/styles.scss";
+@import "components/post-footer/styles.scss";
+@import "components/post-header/styles.scss";
+@import "components/post-placeholder/styles.scss";
+@import "components/share-button/styles.scss";
 @import "components/social-button/styles.scss";
 
 @import "blocks/app/styles.scss";
