Add ErrorCode component

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -1,6 +1,7 @@
 @import "./config.scss";
 @import "./shared.scss";
 
+@import "components/error-code/styles.scss";
 @import "components/navigation/styles.scss";
 @import "components/post-content/styles.scss";
 @import "components/post-footer/styles.scss";
