Add PostsFeed component

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -4,6 +4,7 @@
 @import "components/error-code/styles.scss";
 @import "components/navigation/styles.scss";
 @import "components/post-content/styles.scss";
+@import "components/post-excerpt/styles.scss";
 @import "components/post-footer/styles.scss";
 @import "components/post-header/styles.scss";
 @import "components/post-placeholder/styles.scss";
