--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -5,6 +5,7 @@
 @import "components/error-code/styles.scss";
 @import "components/navigation/styles.scss";
 @import "components/page-header/styles.scss";
+@import "components/pagination/styles.scss";
 @import "components/post-content/styles.scss";
 @import "components/post-excerpt/styles.scss";
 @import "components/post-footer/styles.scss";
