Add a 'view all' button to the home page

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -2,7 +2,7 @@
 @import "./shared.scss";
 
 @import "components/app/styles.scss";
-@import "components/error-code/styles.scss";
+@import "components/navigation/styles.scss";
 @import "components/navigation/styles.scss";
 @import "components/page-header/styles.scss";
 @import "components/pagination/styles.scss";
@@ -13,3 +13,5 @@
 @import "components/post-placeholder/styles.scss";
 @import "components/share-button/styles.scss";
 @import "components/social-button/styles.scss";
+
+@import "views/home/styles.scss";
