--- a/assets/stylesheets/shared.scss
+++ b/assets/stylesheets/shared.scss
@@ -6,11 +6,17 @@
 	text-decoration: none;
 }
 
+html {
+	height: 100%;
+	overflow: hidden;
+}
+
 body {
 	background-color: $background-grey;
 	color: $text-content;
 	font-size: 18px;
-	// overflow: hidden;
+	height: 100%;
+	overflow: auto;
 	width: 100%;
 }
 
