--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -4,6 +4,7 @@
 @import "components/app/styles.scss";
 @import "components/error-code/styles.scss";
 @import "components/disqus-thread/styles.scss";
+@import "components/image-preview/styles.scss";
 @import "components/navigation/styles.scss";
 @import "components/page-header/styles.scss";
 @import "components/pagination/styles.scss";
