Implement RWD and gesture support

--- a/assets/stylesheets/config.scss
+++ b/assets/stylesheets/config.scss
@@ -23,6 +23,7 @@ $light-grey: #e0e0e8;
 $medium-grey: #d4d4d4;
 $dark-grey: #ccc;
 $black: #111;
+$black-default: #000;
 
 $text-headers: #111;
 $text-content: #666;
