--- a/client/components/navigation/styles.scss
+++ b/client/components/navigation/styles.scss
@@ -70,7 +70,7 @@
 		top: 25px;
 	z-index: 100;
 
-	&.is-active {
+	.navigation.is-expanded & {
 		color: $white;
 	}
 
@@ -94,7 +94,7 @@
 	width: 100%;
 	transition: right .2s;
 
-	&.is-active {
+	.navigation.is-expanded & {
 		right: 0;
 	}
 
