Add a <ScreenReaderText /> component

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -13,6 +13,7 @@
 @import "components/post-footer/styles.scss";
 @import "components/post-header/styles.scss";
 @import "components/post-placeholder/styles.scss";
+@import "components/screen-reader-text/styles.scss";
 @import "components/search-form/styles.scss";
 @import "components/share-button/styles.scss";
 @import "components/social-button/styles.scss";
