Use font-display: swap;

--- a/assets/stylesheets/config.scss
+++ b/assets/stylesheets/config.scss
@@ -10,7 +10,7 @@ $desktop: "only screen and (min-width: 1150px)";
 // Fonts ----------------------------------------------------------------------
 
 $headers: 'Montserrat', sans-serif;
-$text: 'Open Sans', serif;
+$text: 'Open Sans', sans-serif;
 $code: 'Source Code Pro', monospace;
 
 // Colors ---------------------------------------------------------------------
